# boulderboard

./: .gitignore  Cargo.toml  LICENSE-MIT
public/: style.css
src/: discipline.rs  home.rs  leaderboard.rs  main.rs
src/api/: mod.rs  result.rs  seasons.rs
test_data/: boulder_live.json  boulder_live_2.json  boulder_live_3.json  boulder_live_men_qualifications.json  results_boulder_finished.json  results_lead_live.json
