[package]
name = "boulderboard"
version = "0.1.0"
edition = "2021"
authors = ["Terts Diepraam <terts.diepraam@gmail.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.70"
repository = "https://github.com/tertsdiepraam/boulderboard/"
description = "A UI for keeping track of climbing competitions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.3", features = ["derive"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", optional = true }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", optional = true }
gloo-timers = { version = "0.2.6", optional = true }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", optional = true }

[features]
default = ["web"]
web = ["dep:dioxus-web", "dep:gloo-timers"]
desktop = ["dep:dioxus-desktop", "dep:tokio"]
